[project]
name = "flowforge-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.137.2",
    "pwdlib[argon2,argone2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard,standart]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]
